--- a/.gitignore
+++ b/.gitignore
@@ -1,29 +1,41 @@
 # Dependencies
-node_modules/
-package-lock.json
+node_modules
 
 # Build output
-dist/
-*.tsbuildinfo
-
-# IDE
-.vscode/
-.idea/
-*.swp
-*.swo
-*~
-
-# OS
-.DS_Store
-Thumbs.db
+dist
 
 # Logs
-*.log
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
+*.log
 
-# Environment
+# OS files
+.DS_Store
+Thumbs.db
+
+# Editor directories and files
+.vscode/*
+!.vscode/extensions.json
+.idea
+*.suo
+*.ntvs*
+*.njsproj
+*.sln
+*.sw?
+
+# Claude Code
+.claude
+
+# Environment variables
 .env
 .env.local
 .env.*.local
+
+# Test coverage
+coverage
+
+# Temporary files
+*.tgz
+*.tmp
+*.temp
